--- a/qtdesigner.ui
+++ b/qtdesigner.ui
@@ -12,8 +12,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>914</width>
-    <height>592</height>
+    <width>1080</width>
+    <height>610</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -30,7 +30,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>1000</width>
+    <width>1500</width>
     <height>1000</height>
    </size>
   </property>
@@ -42,7 +42,7 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget{
-	background-color:#d7ecf4;
+	background-color:#ebeef5;
 	border:none;outline: none;
 }
 QWidget::layout{
@@ -59,8 +59,8 @@ QWidget::layout{
    <widget class="QPushButton" name="sendButton">
     <property name="geometry">
      <rect>
-      <x>592</x>
-      <y>540</y>
+      <x>0</x>
+      <y>300</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -73,14 +73,15 @@ QWidget::layout{
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
+	background-color: #354052;
 	color:white;
-	background-color:#5d9700;
-	border:none;	
+	border:none;
+	border-left: 10px solid #354052
 }
 QPushButton:hover{
-	background-color:#436d00;	
-}
-QPushButton:focus{outline: none;}</string>
+	background-color:#3f4d63;
+	border-left: 10px solid #1dba9b
+}</string>
     </property>
     <property name="text">
      <string>Рассылка</string>
@@ -92,10 +93,10 @@ QPushButton:focus{outline: none;}</string>
    <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
-      <x>2</x>
-      <y>390</y>
-      <width>588</width>
-      <height>200</height>
+      <x>340</x>
+      <y>440</y>
+      <width>720</width>
+      <height>150</height>
      </rect>
     </property>
     <property name="font">
@@ -110,6 +111,7 @@ QPushButton:focus{outline: none;}</string>
      <string notr="true">QTextEdit{
 	border:none;
 	background-color:white;
+	padding: 0.5em;
 }</string>
     </property>
     <property name="placeholderText">
@@ -119,10 +121,10 @@ QPushButton:focus{outline: none;}</string>
    <widget class="QListWidget" name="listWidget">
     <property name="geometry">
      <rect>
-      <x>2</x>
-      <y>40</y>
-      <width>454</width>
-      <height>348</height>
+      <x>340</x>
+      <y>60</y>
+      <width>350</width>
+      <height>360</height>
      </rect>
     </property>
     <property name="font">
@@ -136,6 +138,7 @@ QPushButton:focus{outline: none;}</string>
 QListWidget{
 	border:none;
 	background-color:white;
+	padding: 0.5em;
 }
 QListWidget{
     border:none;
@@ -144,11 +147,11 @@ QListWidget{
 QScrollBar:vertical {border: none;
 background-color: white;}
 QScrollBar::handle:vertical {
-border:none;background-color:#acd8e8;}
+border:none;background-color:#d1d2d7;}
 QScrollBar:horizontal {border: none;
 background-color: white;}
 QScrollBar::handle:horizontall {
-border:none;background-color:#acd8e8;}</string>
+border:none;background-color:#d1d2d7;}</string>
     </property>
     <property name="autoScroll">
      <bool>true</bool>
@@ -175,10 +178,10 @@ border:none;background-color:#acd8e8;}</string>
    <widget class="QListWidget" name="sendListWidget">
     <property name="geometry">
      <rect>
-      <x>458</x>
-      <y>40</y>
-      <width>454</width>
-      <height>348</height>
+      <x>710</x>
+      <y>60</y>
+      <width>350</width>
+      <height>360</height>
      </rect>
     </property>
     <property name="font">
@@ -192,6 +195,7 @@ border:none;background-color:#acd8e8;}</string>
 QListWidget{
 	border:none;
 	background-color:white;
+padding: 0.5em;
 }
 QListWidget{
     border:none;
@@ -200,9 +204,11 @@ QListWidget{
 QScrollBar:vertical {border: none;
 background-color: white;}
 QScrollBar::handle:vertical {
-border:none;background-color:#acd8e8;}
+border:none;background-color:#d1d2d7;}
 QScrollBar:horizontal {border: none;
-background-color: white;}</string>
+background-color: white;}
+QScrollBar::handle:horizontall {
+border:none;background-color:#d1d2d7;}</string>
     </property>
     <property name="selectionMode">
      <enum>QAbstractItemView::SingleSelection</enum>
@@ -211,8 +217,8 @@ background-color: white;}</string>
    <widget class="QPushButton" name="findButton">
     <property name="geometry">
      <rect>
-      <x>592</x>
-      <y>490</y>
+      <x>0</x>
+      <y>200</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -225,11 +231,14 @@ background-color: white;}</string>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
-	background-color:white;
-border:none;
+	background-color: #354052;
+	color:white;
+	border:none;
+	border-left: 10px solid #354052
 }
 QPushButton:hover{
-	background-color:#f2f6fc;
+	background-color:#3f4d63;
+	border-left: 10px solid #1dba9b
 }</string>
     </property>
     <property name="text">
@@ -239,8 +248,8 @@ QPushButton:hover{
    <widget class="QPushButton" name="selectAllButton">
     <property name="geometry">
      <rect>
-      <x>592</x>
-      <y>440</y>
+      <x>0</x>
+      <y>150</y>
       <width>320</width>
       <height>50</height>
      </rect>
@@ -253,11 +262,14 @@ QPushButton:hover{
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
-	background-color:white;
-border:none;
+	background-color: #354052;
+	color:white;
+	border:none;
+	border-left: 10px solid #354052
 }
 QPushButton:hover{
-	background-color:#f2f6fc;
+	background-color:#3f4d63;
+	border-left: 10px solid #1dba9b
 }</string>
     </property>
     <property name="text">
@@ -267,10 +279,10 @@ QPushButton:hover{
    <widget class="QPushButton" name="addListButton">
     <property name="geometry">
      <rect>
-      <x>872</x>
-      <y>348</y>
-      <width>40</width>
-      <height>40</height>
+      <x>0</x>
+      <y>250</y>
+      <width>320</width>
+      <height>50</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -290,22 +302,25 @@ QPushButton:hover{
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
-	background-color:white;
-border:none;
+	background-color: #354052;
+	color:white;
+	border:none;
+	border-left: 10px solid #354052
 }
 QPushButton:hover{
-	background-color:#f2f6fc;
+	background-color:#3f4d63;
+	border-left: 10px solid #1dba9b
 }</string>
     </property>
     <property name="text">
-     <string>+</string>
+     <string>Сохранить список</string>
     </property>
    </widget>
    <widget class="QPushButton" name="loadListsButton">
     <property name="geometry">
      <rect>
-      <x>592</x>
-      <y>390</y>
+      <x>0</x>
+      <y>100</y>
       <width>320</width>
       <height>51</height>
      </rect>
@@ -318,68 +333,24 @@ QPushButton:hover{
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
-	background-color:white;
-border:none;
+	background-color: #354052;
+	color:white;
+	border:none;
+	border-left: 10px solid #354052
 }
 QPushButton:hover{
-	background-color:#f2f6fc;
+	background-color:#3f4d63;
+	border-left: 10px solid #1dba9b
 }</string>
     </property>
     <property name="text">
      <string>Загрузить список</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="rollButton">
-    <property name="geometry">
-     <rect>
-      <x>832</x>
-      <y>0</y>
-      <width>40</width>
-      <height>40</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Verdana</family>
-      <pointsize>16</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
-     </font>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {	
-padding-bottom: 0.4em;
-background-color:#d7ecf4;
-border:none;	
-}
-QPushButton:hover {
-padding-bottom: 0.4em;
-background-color:#b7e3f4;
-}
-QPushButton:focus {
-outline:none;
-}</string>
-    </property>
-    <property name="text">
-     <string>-</string>
-    </property>
-    <property name="autoDefault">
-     <bool>false</bool>
-    </property>
-    <property name="default">
-     <bool>false</bool>
-    </property>
-   </widget>
    <widget class="QPushButton" name="closeButton">
     <property name="geometry">
      <rect>
-      <x>872</x>
+      <x>1040</x>
       <y>0</y>
       <width>40</width>
       <height>40</height>
@@ -402,7 +373,7 @@ outline:none;
     <property name="styleSheet">
      <string notr="true">QPushButton {	
 padding-bottom: 0.4em;
-background-color:#d7ecf4;
+background-color: #1dba9b;
 border:none;	
 }
 QPushButton:hover {
@@ -424,6 +395,125 @@ outline:none;
      <bool>false</bool>
     </property>
    </widget>
+   <widget class="QFrame" name="frame">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>320</width>
+      <height>610</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QWidget{
+	background-color: #354052;
+}</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label">
+     <property name="geometry">
+      <rect>
+       <x>139</x>
+       <y>20</y>
+       <width>47</width>
+       <height>70</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap>../../Desktop/70px.png</pixmap>
+     </property>
+    </widget>
+    <zorder>sendButton</zorder>
+    <zorder>widget</zorder>
+    <zorder>label</zorder>
+   </widget>
+   <widget class="QFrame" name="frame_2">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>0</y>
+      <width>760</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QWidget{
+	background-color: #1dba9b;
+}</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QPushButton" name="rollButton">
+     <property name="geometry">
+      <rect>
+       <x>680</x>
+       <y>0</y>
+       <width>40</width>
+       <height>40</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Verdana</family>
+       <pointsize>16</pointsize>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton {	
+padding-bottom: 0.4em;
+background-color: #1dba9b;
+border:none;	
+}
+QPushButton:hover {
+padding-bottom: 0.4em;
+background-color:#16967d;
+}
+QPushButton:focus {
+outline:none;
+}</string>
+     </property>
+     <property name="text">
+      <string>-</string>
+     </property>
+     <property name="autoDefault">
+      <bool>false</bool>
+     </property>
+     <property name="default">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </widget>
+   <zorder>frame_2</zorder>
+   <zorder>frame</zorder>
+   <zorder>sendButton</zorder>
+   <zorder>textEdit</zorder>
+   <zorder>listWidget</zorder>
+   <zorder>sendListWidget</zorder>
+   <zorder>findButton</zorder>
+   <zorder>selectAllButton</zorder>
+   <zorder>addListButton</zorder>
+   <zorder>loadListsButton</zorder>
+   <zorder>closeButton</zorder>
   </widget>
  </widget>
  <resources/>
